internal/engine/testdata/thirdparty/istio/istio.authorization-policy-no-source-restriction/good/deny-action-unrestricted.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: deny-all-admin
  namespace: payments
spec:
  action: DENY
  rules:
    - to:
        - operation:
            paths: ["/admin/*"]
